# aidsorb

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: build-install.yaml  coverage.yaml  pylint.yaml  pypi.yaml  unittest.yaml
docs/: requirements.txt
docs/source/: api.rst  changelog.rst  cli.rst  conf.py  getting_started.rst  index.rst  installation.rst  sg_execution_times.rst  tutorial.rst
docs/source/_autosummary/: aidsorb.data.rst  aidsorb.datamodules.rst  aidsorb.litmodels.rst  aidsorb.litmodules.rst  aidsorb.models.rst  aidsorb.modules.points.rst  aidsorb.modules.rst  aidsorb.modules.voxels.rst  aidsorb.transforms.rst  aidsorb.utils.rst  aidsorb.visualize.rst
docs/source/_static/: custom.css
docs/source/_templates/: module.rst
docs/source/auto_examples/: index.rst  plot_pcd.ipynb  plot_pcd.py  plot_pcd.py.md5  plot_pcd.rst  plot_pcd_codeobj.pickle  resume.ipynb  resume.py  resume.rst  resume_codeobj.pickle  searchindex  sg_execution_times.rst
docs/source/auto_examples/images/: sphx_glr_plot_pcd_001.html  sphx_glr_plot_pcd_002.html
docs/source/download/: aidsorb_tutorial.ipynb  config.yaml
docs/source/download/toy_project/configs/: config_example.yaml
docs/source/download/toy_project/labels/: labels.csv
docs/source/examples/: README.rst  config.yaml  finetune.py  labels.csv  plot_pcd.py  resume.py
docs/source/images/: pcd_plotly.html  pes_plotly.html
src/aidsorb/: __init__.py  _check.py  _cli.py  _internal.py  _litmodels_utils.py  _torch_utils.py  _transforms_utils.py  cli.py  data.py  datamodules.py  litmodels.py  litmodules.py  models.py  modules.py  transforms.py  utils.py  visualize.py
src/aidsorb/learning/: model.py
src/aidsorb/modules/: __init__.py  points.py  voxels.py
src/aidsorb/pkg_data/: README.md  periodic_table.csv
src/aidsorb/preprocess/: utils.py  visualize.py
src/aidsorb/transforms/: __init__.py  points.py  voxels.py
tests/: __init__.py  samples.csv  test__cli.py  test__litmodels_utils.py  test__torch_utils.py  test__transforms_utils.py  test_cli.py  test_data.py  test_datamodules.py  test_lightning.py  test_litmodels.py  test_litmodules.py  test_models.py  test_modules.py  test_transforms.py  test_utils.py  test_visualize.py
tests/dummy/: config_example.yaml  toy_dataset.csv
tests/dummy/toy_project/: test.json  train.json  validation.json
tests/dummy/toy_project/pcd_data/: COF-5.npy  Cu-BTC.npy  IRMOF-1.npy  ZIF-1.npy  ZnMOF-74.npy  ala_phe_ala.npy
tests/samples/: IRMOF-1.xyz
