[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.pylint.main]
jobs = 0
disable = ["C"]
fail-under = 8

[project]
name = "aidsorb"
dynamic = ["version"]
authors = [
  {name="Antonios P. Sarikas", email="antonios.sarikas@gmail.com"},
]
license = "GPL-3.0-only"

description = "Python package for deep learning on molecular point clouds."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "ase>=3.23.0",
    "plotly>=5.19.0",
    "tqdm>=4.66.2",
    "pandas>=2.2.0",
    "roma>=1.5.1",
    "lightning>=2.5.0",
    "jsonargparse[signatures]>=4.39.0",
    "torchmetrics>=1.7.1",
    "numpy>=1.26.4",
]

[project.urls]
Homepage = "https://github.com/adosar/aidsorb"
Issues = "https://github.com/adosar/aidsorb/issues"
Documentation = "https://aidsorb.readthedocs.io/en/stable/"

[project.scripts]
aidsorb = "aidsorb._cli:aidsorb_cli"
aidsorb-lit = "aidsorb._cli:lightning_cli"

[project.optional-dependencies]
docs = [
    "sphinx>=8.2.3",
    "sphinx-rtd-theme==3.0.2",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinx-gallery>=0.16.0",
    "kaleido==0.2.1",
]
